--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.png">
     <title>My new app</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <div id="mobile-div" style="width: 602px; height: 420px; border:1px solid black; ">
+
+    <div class="container" id="mobile-div">
       <svg id="mobile-svg" xmlns="http://www.w3.org/2000/svg" style="display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit;" version="1.1">
         <defs>
           <linearGradient id="linear-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
