--- a/index.html
+++ b/index.html
@@ -2,40 +2,27 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.png">
-    <title>My new app</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="shortcut icon" href="favicon.png">
+  <title>My new app</title>
+  <link rel="stylesheet" href="style.css">
+
+  <script defer src="https://code.jquery.com/jquery.js"></script>
+  <script defer src='https://unpkg.com/panzoom@9.4.0/dist/panzoom.min.js'></script>
+  <script defer src='./script.js'></script>
 
 </head>
 
 <body>
 
-    <div class="container" id="mobile-div">
-      <svg id="mobile-svg" xmlns="http://www.w3.org/2000/svg" style="display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit;" version="1.1">
-        <defs>
-          <linearGradient id="linear-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-            <stop offset="0%" style="stop-color:rgb(56,121,217);stop-opacity:1" />
-            <stop offset="100%" style="stop-color:rgb(138,192,7);stop-opacity:1" />
-          </linearGradient>
-        </defs>
-        <g fill="none">
-          <g stroke="#000" fill="#FFF">
-            <rect x="5" y="5" width="240" height="240" fill="url(#linear-gradient)"/>
-            <path d="M 5 5  L 245 245 Z"/>
-          </g>
-        </g>
-      </svg>
-    </div>
+  <div class="container" id="pan-container">
+    <img id="svg2" src="./transit-map.svg">
+  </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="svg-pan-zoom.js"></script>
-    <script src="hammer.js"></script>
-    <script src="script.js"></script>
 </body>
 
 </html>
