--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="shortcut icon" href="favicon.png">
-  <title>My new app</title>
+  <title>Transit Map</title>
   <link rel="stylesheet" href="style.css">
 
   <script defer src="https://code.jquery.com/jquery.js"></script>
