--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div class="container" id="pan-container">
-    <img id="svg2" src="./optimised-map.svg">
+    <img id="svg2" src="./transit-map.svg">
   </div>
 
 </body>
