update path to svg

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body onload="onLoad()">
   <div class="container" id="pan-container">
-    <img id="svg" src="./out.svg">
+    <img id="svg" src="./maps/rail.svg">
   </div>
 </body>
 
